# electronics-network

./: .env.docker.test  .env.test  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
electronics_network/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  test_my.py  urls.py  views.py
electronics_network/migrations/: 0001_initial.py  0002_alter_manufacturer_level_alter_retailnetwork_level.py  0003_alter_individualentrepreneur_level_and_more.py  0004_alter_individualentrepreneur_level_and_more.py  0005_alter_individualentrepreneur_owner_and_more.py  0006_alter_product_owner_alter_transaction_owner.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
