[tool.poetry]
name = "electronics-network"
version = "0.1.0"
description = ""
authors = ["fniad <artkamproject@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_network"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.7"
django-filter = "^23.5"
pytest = "^8.0.1"
pytest-django = "^4.8.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
